CHATS_SIT/force-app/main/default/objects/Linked_To__c.object
<CustomObject>
    <description>This object acts as a junction for linking the support tickets.</description>
    <fields>
        <fullName>Linked_Issues__c</fullName>
        <label>Linked Issues</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>blocks</fullName>
                </value>
                <value>
                    <fullName>is cloned by</fullName>
                </value>
                <value>
                    <fullName>clones</fullName>
                </value>
                <value>
                    <fullName>is duplicated by</fullName>
                </value>
                <value>
                    <fullName>duplicates</fullName>
                </value>
                <value>
                    <fullName>Implemented via</fullName>
                </value>
                <value>
                    <fullName>relates to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Ticket1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Link Support Ticket</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You cannot link a Non Support Ticket</errorMessage>
            <filterItems>
                <field>CHATS_Support__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Support Ticket</value>
            </filterItems>
            <infoMessage>You can only link Support Tickets</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CHATS_Support__c</referenceTo>
        <relationshipLabel>Linked To</relationshipLabel>
        <relationshipName>Support_Ticket_Second</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Ticket__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Support Ticket</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You cannot link a non Support Ticket</errorMessage>
            <filterItems>
                <field>CHATS_Support__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Support Ticket</value>
            </filterItems>
            <infoMessage>You can link only Support Tickets</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CHATS_Support__c</referenceTo>
        <relationshipLabel>Linked To</relationshipLabel>
        <relationshipName>Support_Ticket</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Linked To</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked To</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>